# bliss

./: .gitignore  Bliss.pkg  CMakeLists.txt  DEVLOG.md  Makefile  README.md  RELEASE_v0.3.0.md  devlogs.md  idea.md  index.html  package-lock.json  package.json  quotes.txt  ship.md  temp.md  todo.md  vite.config.js
build_arm64/: CMakeCache.txt  CTestTestfile.cmake  Makefile  bliss  blissd  blissroot  cmake_install.cmake  test_hosts_block
build_universal/: bliss  blissd  blissroot
build_x86/: CMakeCache.txt  CTestTestfile.cmake  Makefile  bliss  blissd  blissroot  cmake_install.cmake  test_hosts_block
gui/: BlissCommandRunner.swift  BlissSounds.swift  BlissViewModel.swift  CodeforcesPanic.swift  ContentView.swift  Game2048PanicView.swift  MinesweeperPanicView.swift  NotificationManager.swift  PanicChallengeDefinition.swift  PanicChallengeView.swift  PipesPanicView.swift  ScheduleView.swift  SessionStats.swift  SimonSaysPanicView.swift  SudokuPanicView.swift  TypingPanicView.swift  WizardOptionCard.swift  WordlePanicView.swift  main.swift
menubar/: com.bliss.menubar.plist  main.swift
quotes/: huge.txt  long.txt
root/: com.bliss.root.plist
scripts/: build_pkg.sh  install.sh  install_menubar.sh  run_gui.sh  run_tests.sh  uninstall.sh
src/: blissd.cpp  blissroot.cpp  firewall_block.cpp  firewall_linux.cpp  hosts_block.cpp  hosts_block.h  main.cpp
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
tests/: test_gui_logic.swift  test_hosts_block.cpp  test_ui_logic.swift  test_ui_logic_runner
tools/problem_bank/: README.md  fetch_cses.py  fetch_samples.py
ui/: App.svelte  CompetitiveChallenge.svelte  Game2048Challenge.svelte  GuidedSetup.svelte  MinesweeperChallenge.svelte  PipesChallenge.svelte  Schedule.svelte  Settings.svelte  SimonSaysChallenge.svelte  Stats.svelte  SudokuChallenge.svelte  TypingChallenge.svelte  WordleChallenge.svelte
(+8 files in other folders)
